// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik jCoLHv sc-bSFUlv ieHjHw sc-jvfqPk bvBrDk"
    >
      <h3
        class="sc-gWHigU hGGoTM sc-cBNeex gsjqDj"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik jCoLHv sc-bSFUlv fXMplH sc-jvfqPk bvBrDk"
    >
      <h3
        class="sc-gWHigU hGGoTM sc-cBNeex gsjqDj"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
